--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,44 @@ section .locator h2{
 
 }
 
+/*TIP*/
+.tip {
+    text-align: center;
+    top: 0px;
+  border-radius: 3px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  position: absolute;
+  max-width: 220px;
+  padding: 5px 10px;
+  opacity: 0;
+  font-family: "Open sans";
+  z-index: 110;
+}
+.tip .close-tip {
+    font-size: .8em;
+    text-align: right;
+    color: #888;
+    display: none;
+}
+.tip .title {
+  font-size: .8em;
+  margin-bottom: 2px;
+}
+
+.tip .title span{
+    font-weight: bold;
+}
+.tip .datum {
+    font-size: .7em;
+}
+.tip .cover-image img {
+    margin-top: 5px;
+    width: 100%;
+    max-width: 120px;
+    opacity: 1;
+}
+
 @media (max-width:800px){
     .social-shares {text-align: center; font-size: 1em;}.social-shares .social.whatsapp{background-color:#43d854;display:inline-block}.social-shares .social{width:auto;padding:.2em .8em}.social-shares .social i{margin-right:0}.social-shares .social span{display:none}.social-shares .social{margin:0 0;border-radius:0px;width: 33%; text-align: center;border-width: 4px!important}}
 
