--- a/css/styles.css
+++ b/css/styles.css
@@ -352,11 +352,13 @@ section .locator h2{
     margin-top: 0.5em;
 
 }
-.hist-label .label-box{
+.label-box{
     width: 10px;
     height: 10px;
     display: inline-block;
     margin-right: 5px;
+    opacity: 0.8;
+    border-radius: 50%;
 }
 
 .chart-title{
@@ -418,6 +420,9 @@ section .locator h2{
     display: none;
 }
 
+.legend-labels{
+    width: 100px;
+}
 
 .median text{
     font-size: 0.8em;
@@ -485,33 +490,17 @@ section .locator h2{
     max-width: 120px;
     opacity: 1;
 }
-#year-box{
-    display: none;
-}
 
-.desktop-year{
-    display: inline-block;
-    text-align: center;
-    margin: 0.8em;
-    font-weight: bold;
-    font-family: "Open Sans"
-}
-
-#histogram .hist-ann text{
-    font-size: 0.7em;
-
-}
-
-#line-chart .annotation text{
+.annotation text{
     font-family: "Open Sans";
-    font-size: 0.8em;
+    font-size: 0.7em;
+    text-align: left;
     text-shadow: 0px 0px 2px #fff, 0px 0px 5px #fff, 0px 0px 5px #fff, 0px 0px 15px #fff;
-
 }
 
 /*TIP*/
 .tip {
-    text-align: center;
+    
     top: 0px;
   border-radius: 3px;
   background-color: #fff;
@@ -529,17 +518,21 @@ section .locator h2{
     color: #888;
     display: none;
 }
-.tip .title {
+.tip{
   font-size: .8em;
   margin-bottom: 2px;
+  text-align: left;
 }
 
-.tip .title span{
+ .tip .title {
     font-weight: bold;
-}
-.tip .datum {
-    font-size: .7em;
-}
+    font-size: 1.2em;
+    text-align: center;
+ }
+ .tip span{
+    font-weight: bold;
+ }
+
 .tip .cover-image img {
     margin-top: 5px;
     width: 100%;
@@ -652,16 +645,14 @@ section .locator h2{
 }
 
 @media(max-width: 650px){
-    #year-box{
-        display: block;
-    }
+    
     .tip .close-tip {
         display: block;
     }
     .tip{
         text-align: left;
     }
-    .hist-label-container{
+    .legend-labels{
         width: 95%;
         text-align: left;
         margin: 0 auto
