--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,8 @@ h3.byline{
 .byline .line{
         width: 220px;
         margin: 1em auto;
-        border: 2px solid #54278f;
+        border: 2px solid #B43640;
+        padding: 0; 
 }
 
 h3.byline.dateline{
@@ -241,7 +242,9 @@ section{
     opacity: 0.8;
 }
 .related-stories h3{
-    font-size: 0.9em;
+    line-height: 1.4em;
+     margin-top: 0.5em; 
+     font-size: 0.8em;
 }
 
 .related-stories h3 span{
@@ -346,6 +349,10 @@ section h2{
 section .locator h2{
     border-bottom: none;
 }
+.locator svg{
+    margin: 0 auto;
+    display: table;
+}
 .locator .chart-source{
     font-size: 0.7em;
     line-height: 1.3em;
@@ -384,6 +391,10 @@ section .locator h2{
     text-align: center;
     width: 50px;
     display: inline-block;
+}
+
+.legend-labels.map{
+    width: 80px;
 }
 
 .years{
@@ -443,9 +454,9 @@ section .locator h2{
 }
 .locator .chart-title{
     margin: 0;
-    font-size: 1.2em;
+    font-size: 1em;
     text-align: left;
-    margin-bottom: 0.8em;
+    margin-bottom: 0.6em;
 }
 
 .locator .chart-subhed{
